# weather-super-smart-llm

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  langgraph.json  package-lock.json  package.json
.claude/agents/: agronomy-retriever.md  recommendation-scorer.md  ui-contract-guardian.md  weather-risk-analyst.md
apps/api/: README.md  pyproject.toml
apps/api/scripts/: backfill_chunk_embeddings.py
apps/api/soil_crop_advisor/: api_schemas.py  chat_stream.py  deep_agent.py  env.py  langgraph_export.py  logging_config.py  main.py  service.py
apps/api/soil_crop_advisor/db/: __init__.py  pg_repository.py  pool.py
apps/api/soil_crop_advisor/domain/: __init__.py  calculator.py  models.py  normalization.py  recommendation_engine.py  repository.py  rule_selector.py  scoring.py
apps/api/soil_crop_advisor/integrations/: __init__.py  imd_client.py  imd_live.py  open_meteo.py  weather_scores.py
apps/api/soil_crop_advisor/rag/: __init__.py  embeddings.py  retrieval.py
apps/api/tests/: benchmark_10sessions.py  test_deep_agent_config.py  test_demo_karnataka_catalog.py  test_normalization.py  test_rag_retrieval.py  test_recommendation_engine.py  test_rule_selection.py
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: assistant-markdown-text.tsx  assistant-panel.tsx  nutrient-heatmap.tsx  (+4 more)
db/: schema.sql  seed.sql
db/migrations/: 002_source_chunk_embedding_ivfflat.sql
docs/: PRD.md  scoring-spec.md  source-register.md
prompts/: supervisor.md
(+6 files in other folders)
