[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soil-crop-advisor-api"
version = "0.1.0"
description = "Starter FastAPI backend for the Soil Crop Advisor"
requires-python = ">=3.11"
dependencies = [
  "deepagents>=0.4.12,<0.5.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "openai>=1.40,<3.0",
  "psycopg[binary,pool]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0"
]

[tool.setuptools.packages.find]
include = ["soil_crop_advisor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
